welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:6: error: not found: value j
		if(nums(j)==value){
                        ^indexOfValue:11: error: type mismatch;
 found   : Unit
 required: Int
	for (j<-0 to (nums.length-1)){
              ^